--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <!-- Title -->
-    <title>Cryptos - Cryptocurrency &amp; Mining Template</title>
+    <!-- Titulo -->
+    <title>THE CRYPTO MONEY</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
 
-    <!-- Core Stylesheet -->
+    
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/classy-nav.min.css">
+    <link rel="stylesheet" href="css/custom-icon.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+
+    <!-- Css-->
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -25,31 +33,8 @@
         <i class="circle-preloader"></i>
     </div>
 
-    <!-- ##### Header Area Start ##### -->
+    <!-- ##### Header ##### -->
     <header class="header-area">
-
-        <!-- Top Header Area -->
-        <div class="top-header">
-            <div class="container h-100">
-                <div class="row h-100">
-                    <div class="col-12 h-100">
-                        <div class="top-header-content h-100 d-flex align-items-center justify-content-between">
-                            <!-- Top Headline -->
-                            <div class="top-headline">
-                                <p>Welcome to <span>Cryptos</span></p>
-                            </div>
-                            <!-- Top Login & Faq & Earn Monery btn -->
-                            <div class="login-faq-earn-money">
-                                <a href="#">Login | Register</a>
-                                <a href="#">FAQ</a>
-                                <a href="#" class="active">Earn Money</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <!-- Navbar Area -->
         <div class="cryptos-main-menu">
             <div class="classy-nav-container breakpoint-off">
@@ -77,77 +62,15 @@
                             <div class="classynav">
                                 <ul>
                                     <li><a href="index.html">Home</a></li>
-                                    <li><a href="#">Pages</a>
-                                        <ul class="dropdown">
-                                            <li><a href="index.html">Home</a></li>
-                                            <li><a href="about-us.html">About Us</a></li>
-                                            <li><a href="blog.html">Articles</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
-                                            <li><a href="elements.html">Elements</a></li>
-                                            <li><a href="#">Dropdown</a>
-                                                <ul class="dropdown">
-                                                    <li><a href="index.html">Home</a></li>
-                                                    <li><a href="about-us.html">About Us</a></li>
-                                                    <li><a href="blog.html">Articles</a></li>
-                                                    <li><a href="contact.html">Contact</a></li>
-                                                    <li><a href="elements.html">Elements</a></li>
-                                                    <li><a href="#">Dropdown</a>
-                                                        <ul class="dropdown">
-                                                            <li><a href="index.html">Home</a></li>
-                                                            <li><a href="about-us.html">About Us</a></li>
-                                                            <li><a href="blog.html">Articles</a></li>
-                                                            <li><a href="contact.html">Contact</a></li>
-                                                            <li><a href="elements.html">Elements</a></li>
-                                                        </ul>
-                                                    </li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="#">Mega Menu</a>
-                                        <div class="megamenu">
-                                            <ul class="single-mega cn-col-4">
-                                                <li><a href="#">- Home</a></li>
-                                                <li><a href="#">- About us</a></li>
-                                                <li><a href="#">- Services</a></li>
-                                                <li><a href="#">- Testimonials</a></li>
-                                                <li><a href="#">- News</a></li>
-                                                <li><a href="#">- About us</a></li>
-                                            </ul>
-                                            <ul class="single-mega cn-col-4">
-                                                <li><a href="#">- Contact</a></li>
-                                                <li><a href="#">- Faq</a></li>
-                                                <li><a href="#">- Terms &amp; Conditions</a></li>
-                                                <li><a href="#">- Careers</a></li>
-                                                <li><a href="#">- Newsletter &amp; Exchange</a></li>
-                                                <li><a href="#">- Terms &amp; Conditions</a></li>
-                                            </ul>
-                                            <ul class="single-mega cn-col-4">
-                                                <li><a href="#">- About us</a></li>
-                                                <li><a href="#">- Testimonials</a></li>
-                                                <li><a href="#">- Contact</a></li>
-                                                <li><a href="#">- Terms &amp; Conditions</a></li>
-                                                <li><a href="#">- Newsletter &amp; Exchange</a></li>
-                                                <li><a href="#">- Contact</a></li>
-                                            </ul>
-                                            <div class="single-mega cn-col-4">
-                                                <div class="megamenu-slides owl-carousel">
-                                                    <img src="img/bg-img/bg-1.jpg" alt="">
-                                                    <img src="img/bg-img/bg-1.jpg" alt="">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </li>
                                     <li><a href="#">Currencies</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
 
                                 <!-- Newsletter Form -->
                                 <div class="header-newsletter-form">
-                                    <form action="#" method="post">
-                                        <input type="email" name="email" id="email" placeholder="Newsletter">
-                                        <button type="submit">Subscribe</button>
-                                    </form>
+                                    <div class="login-faq-earn-money">
+                                        <a href="#">Login | Register</a>
+                                    </div>
                                 </div>
 
                             </div>
