Header completo ok

--- a/index.html
+++ b/index.html
@@ -61,15 +61,20 @@
                             <!-- Nav Start -->
                             <div class="classynav">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="#">Currencies</a></li>
-                                    <li><a href="contact.html">Contact</a></li>
+                                    <li><a href="index.html">HOME</a></li>
+                                    <li><a href="#">SOBRE</a></li>
+                                    <li><a href="contact.html">CRYPTO À DISTANCIA</a></li>
+                                    <li><a href="contact.html">STORE</a></li>
+                                    <li><a href="contact.html">CONTATO</a></li>
                                 </ul>
 
                                 <!-- Newsletter Form -->
                                 <div class="header-newsletter-form">
                                     <div class="login-faq-earn-money">
-                                        <a href="#">Login | Register</a>
+                                        <a href="login.html">Login</a> ou 
+                                        <a href="register.html">inscrever 
+                                            <i class="fa fa-user" aria-hidden="true"></i>
+                                        </a>                                        
                                     </div>
                                 </div>
 
@@ -91,40 +96,56 @@
             <div class="single-hero-slide">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
-                        <div class="col-12 col-md-7">
+                        <div class="col-4 col-md-4 offset-md-1">
                             <div class="hero-slides-content">
-                                <h2 data-animation="fadeInUp" data-delay="100ms">Take a step into the <span>Crypto World</span></h2>
-                                <h6 data-animation="fadeInUp" data-delay="400ms">Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar.</h6>
-                                <a href="#" class="btn cryptos-btn" data-animation="fadeInUp" data-delay="700ms">Read More</a>
+                                <h2 data-animation="fadeInUp" data-delay="100ms">APRENDA COM O MELHOR TIME</h2>
                             </div>
                         </div>
-                        <div class="col-12 col-md-5">
+                        <div class="col-4 col-md-2">
                             <div class="hero-slides-thumb" data-animation="fadeInUp" data-delay="1000ms">
                                 <img src="img/bg-img/bg-2.png" alt="">
                             </div>
                         </div>
+                        <div class="col-4 col-md-5">
+                            <div class="hero-slides-content">
+                                <h2 data-animation="fadeInUp" data-delay="100ms"><span>DE INVESTIDORES EM CRYPTOMOEDAS</span></h2>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="text-center button-junteseanos">
+                        <div class="about-content mb-100">
+                            <a href="#" class="btn cryptos-btn mt-30">Junte-se à nós</a>
+                        </div>
+                    </div>
+                </div>                
             </div>
 
-            <!-- Single Hero Slide -->
+           <!-- Single Hero Slide -->
             <div class="single-hero-slide">
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
-                        <div class="col-12 col-md-7">
+                        <div class="col-4 col-md-4 offset-md-1">
                             <div class="hero-slides-content">
-                                <h2 data-animation="fadeInUp" data-delay="100ms">Take a step into the <span>Crypto World</span></h2>
-                                <h6 data-animation="fadeInUp" data-delay="400ms">Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar.</h6>
-                                <a href="#" class="btn cryptos-btn" data-animation="fadeInUp" data-delay="700ms">Read More</a>
+                                <h2 data-animation="fadeInUp" data-delay="100ms">APRENDA COM O MELHOR TIME</h2>
                             </div>
                         </div>
-                        <div class="col-12 col-md-5">
+                        <div class="col-4 col-md-2">
                             <div class="hero-slides-thumb" data-animation="fadeInUp" data-delay="1000ms">
                                 <img src="img/bg-img/bg-2.png" alt="">
                             </div>
                         </div>
+                        <div class="col-4 col-md-5">
+                            <div class="hero-slides-content">
+                                <h2 data-animation="fadeInUp" data-delay="100ms"><span>DE INVESTIDORES EM CRYPTOMOEDAS</span></h2>
+                            </div>
+                        </div>
                     </div>
-                </div>
+                    <div class="text-center button-junteseanos">
+                        <div class="about-content mb-100">
+                            <a href="#" class="btn cryptos-btn mt-30">Junte-se à nós</a>
+                        </div>
+                    </div>
+                </div>                
             </div>
         </div>
     </section>
