Section-about-area ok Favicon ok

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>THE CRYPTO MONEY</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/core-img/favicon.png">
 
     
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -151,82 +151,34 @@
     </section>
     <!-- ##### Hero Area End ##### -->
 
-    <!-- ##### Course Area Start ##### -->
-    <div class="cryptos-feature-area section-padding-100-0">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <div class="section-heading text-center mx-auto">
-                        <h3>Let’s change <br><span>the world</span> together</h3>
-                        <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi.</p>
-                    </div>
-                </div>
-            </div>
-            
-            <div class="row">
-                <!-- Single Course Area -->
-                <div class="col-12 col-md-6 col-xl-3">
-                    <div class="single-feature-area mb-100 text-center">
-                        <i class="icon-safebox"></i>
-                        <h3>Fast &amp; Easy</h3>
-                        <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum.</p>
-                        <a href="#" class="btn cryptos-btn">Read More</a>
-                    </div>
-                </div>
-
-                <!-- Single Course Area -->
-                <div class="col-12 col-md-6 col-xl-3">
-                    <div class="single-feature-area active mb-100 text-center">
-                        <i class="icon-bitcoin"></i>
-                        <h3>No strigs attached</h3>
-                        <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum.</p>
-                        <a href="#" class="btn cryptos-btn">Read More</a>
-                    </div>
-                </div>
-
-                <!-- Single Course Area -->
-                <div class="col-12 col-md-6 col-xl-3">
-                    <div class="single-feature-area mb-100 text-center">
-                        <i class="icon-exchange"></i>
-                        <h3>Small Commisions</h3>
-                        <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum.</p>
-                        <a href="#" class="btn cryptos-btn">Read More</a>
-                    </div>
-                </div>
-
-                <!-- Single Course Area -->
-                <div class="col-12 col-md-6 col-xl-3">
-                    <div class="single-feature-area mb-100 text-center">
-                        <i class="icon-wallet"></i>
-                        <h3>10% Secure</h3>
-                        <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum.</p>
-                        <a href="#" class="btn cryptos-btn">Read More</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- ##### Course Area End ##### -->
 
     <!-- ##### About Area Start ##### -->
     <section class="cryptos-about-area">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-12 col-md-6">
-                    <div class="about-thumbnail mb-100">
-                        <img src="img/bg-img/about.png" alt="">
+            <div class="row">
+                <div class="col-12 mt-30">
+                    <div class="section-heading text-center white mx-auto">
+                        <h3 class="h3-crypto-money">THE CRYPTO MONEY</h3>
+                        <p class="p-crypto-money">O Time que mais cresce na Dreams Digger</p>
                     </div>
                 </div>
+            </div>
+            <div class="row align-items-center">
                 <div class="col-12 col-md-6">
                     <div class="about-content mb-100">
                         <div class="section-heading">
                             <h3>Let’s change <br><span>the world</span> together</h3>
                             <h5>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl.</h5>
                             <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi.</p>
-                            <a href="#" class="btn cryptos-btn mt-30">Read More</a>
+                            <a href="#" class="btn cryptos-btn mt-30">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
+                <div class="col-12 col-md-6">
+                    <div class="about-thumbnail mb-100">
+                        <img src="img/bg-img/breadcumb.png" alt="">
+                    </div>
+                </div>                
             </div>
         </div>
     </section>
