--- a/about-us.html
+++ b/about-us.html
@@ -6,17 +6,23 @@
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-    <!-- Title -->
-    <title>Cryptos - Cryptocurrency &amp; Mining Template</title>
+    <!-- Titulo -->
+    <title>THE CRYPTO MONEY</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="img/core-img/favicon.ico">
+    <link rel="icon" href="img/core-img/favicon.png">
 
-    <!-- Core Stylesheet -->
+    
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/classy-nav.min.css">
+    <link rel="stylesheet" href="css/custom-icon.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+
+    <!-- Css-->
     <link rel="stylesheet" href="style.css">
-
 </head>
 
 <body>
