--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <div class="section-heading text-center white mx-auto">
-                        <h3 class="mb-4">JUNTOS PODEMOS CONQUISTAR MAIS</h3>
+                        <h3 class="mb-4">JUNTOS PODEMOS CONQUISTAR MAIS!!!</h3>
                     </div>
                     <p class="p-junte-se">Junte-se ao time!</p>
                 </div>
