Section area ead ok

--- a/index.html
+++ b/index.html
@@ -167,10 +167,11 @@
                 <div class="col-12 col-md-6">
                     <div class="about-content mb-100">
                         <div class="section-heading">
-                            <h3>Let’s change <br><span>the world</span> together</h3>
-                            <h5>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl.</h5>
+                            <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi.</p> <br>
+
+                            <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi.</p> <br>
+
                             <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi.</p>
-                            <a href="#" class="btn cryptos-btn mt-30">Saiba Mais</a>
                         </div>
                     </div>
                 </div>
@@ -184,6 +185,38 @@
     </section>
     <!-- ##### About Area End ##### -->
 
+
+     <!-- ##### About Area Start ##### -->
+    <section class="ead-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 mt-100">
+                    <div class="section-heading text-center white mx-auto">
+                        <h3 class="h3-crypto-money">CRYPTO À DISTÂNCIA</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-12 col-md-6">
+                    <div class="about-content">
+                        <div class="section-heading">
+                            <p class="mb-3"><span>Mercado de cryptomoedas <br> sem místério</span></p>
+                            <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi.</p> <br>
+                            <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi.</p>
+                            <a href="#" class="btn cryptos-btn mt-30">Saiba Mais</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 text-center">
+                    <div class="about-thumbnail mb-100">
+                        <img src="img/bg-img/ead.png" alt="">
+                    </div>
+                </div>                
+            </div>
+        </div>
+    </section>
+    <!-- ##### About Area End ##### -->
+    
     <!-- ##### Currency Area Start ##### -->
     <section class="currency-calculator-area section-padding-100 bg-img" style="background-image: url(img/bg-img/fundo-podemos.png);">
         <div class="container">
