Section Store completo

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
     <!-- ##### Preloader ##### -->
     <div id="preloader">
-        <i class="circle-preloader"></i>
+        <img src="pore-load.gif" alt="">
     </div>
 
     <!-- ##### Header ##### -->
@@ -203,7 +203,7 @@
                             <p class="mb-3"><span>Mercado de cryptomoedas <br> sem místério</span></p>
                             <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi.</p> <br>
                             <p>Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi. Donec et sollicitudin est, in euismod erat. Ut at erat et arcu pulvinar cursus a eget nisl. Cras vitae turpis lacinia, lacinia lacus non, fermentum nisi.</p>
-                            <a href="#" class="btn cryptos-btn mt-30">Saiba Mais</a>
+                            <a href="#" class="btn cryptos-btn mt-30">Inscreva-se</a>
                         </div>
                     </div>
                 </div>
@@ -216,6 +216,47 @@
         </div>
     </section>
     <!-- ##### About Area End ##### -->
+
+
+    <section class="store-area blog_section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading text-center white mx-auto">
+                        <h3 class="h3-crypto-money">STORE</h3>
+                        <p class="p-crypto-money">Adquira produtos exclusivos do time TCM</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+            <div class="container">
+                <div class="blog_content">
+                    <div class="owl-carousel owl-theme">
+                        <div class="blog_item">
+                            <div class="store-item">
+                                <img class="img-fluid" src="img/shop/camisa01.jpg" alt="images not found">
+                            </div>
+                        </div>                        
+                        <div class="blog_item">
+                            <div class="store-item">
+                                <img class="img-fluid" src="img/shop/camisa02.jpg" alt="images not found">
+                            </div>
+                        </div>                        
+                        <div class="blog_item">
+                            <div class="store-item">
+                                <img class="img-fluid" src="img/shop/camisa03.jpg" alt="images not found">
+                            </div>
+                        </div>
+
+                        <div class="blog_item">
+                            <div class="store-item">
+                                <img class="img-fluid" src="img/shop/camisa04.jpg" alt="images not found">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     
     <!-- ##### Currency Area Start ##### -->
     <section class="currency-calculator-area section-padding-100 bg-img" style="background-image: url(img/bg-img/fundo-podemos.png);">
