--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 
 <body>
     <!-- ##### Preloader ##### -->
-    <div id="preloader">
-        <img src="pore-load.gif" alt="">
-    </div>
+   <div id="preload" class="preload"></div>
 
     <!-- ##### Header ##### -->
     <header class="header-area">
