--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 </div>
                 <div class="col-12 col-md-6">
                     <div class="about-thumbnail mb-100">
-                        <img src="img/bg-img/breadcumb.png" alt="">
+                        <img class="img-fluid" src="img/bg-img/breadcumb.png" alt="">
                     </div>
                 </div>                
             </div>
@@ -207,7 +207,7 @@
                 </div>
                 <div class="col-12 col-md-6 text-center">
                     <div class="about-thumbnail mb-100">
-                        <img src="img/bg-img/ead.png" alt="">
+                        <img class="img-fluid" src="img/bg-img/ead.png" alt="">
                     </div>
                 </div>                
             </div>
