Logos novas e menu ok

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                                 <!-- Newsletter Form -->
                                 <div class="header-newsletter-form">
                                     <div class="login-faq-earn-money">
-                                        <a href="login.html" target="_blank">Login</a> ou 
-                                        <a href="register.html" target="_blank">inscrever 
+                                        <a href="ead/login.html" target="_blank">Login</a> ou 
+                                        <a href="ead/register.html" target="_blank">inscrever 
                                             <i class="fa fa-user" aria-hidden="true"></i>
                                         </a>                                        
                                     </div>
