--- a/ead/register.html
+++ b/ead/register.html
@@ -25,7 +25,7 @@
 		    	<div class="col-sm-9 col-md-7 col-lg-4 mx-auto">
 		        	<div class="card card-signin">
 		          		<div class="card-body">
-				            <a href="index.html"><h5 class="card-title text-center"><img src="../img/core-img/logo.png" alt=""></h5></a>
+				           <a href="../index.html"><h5 class="card-title text-center"><img src="../img/core-img/logo.png" alt=""></h5></a>
 				            <div class="container">
 				            	<form class="form-signin">
 									<div class="form-label-group">
