Menu lateral ok

--- a/ead/index.html
+++ b/ead/index.html
@@ -93,10 +93,10 @@
                             </ul>
                         </li>                        
                         <li>
-                            <a title="Landing Page" href="events.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Fórum</span></a>
+                            <a title="Landing Page" href="events.html" aria-expanded="false"><i class="fa fa-comments-o" aria-hidden="true"></i> <span class="mini-click-non">Fórum</span></a>
                         </li>
                         <li>
-                            <a title="Landing Page" href="events.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Livros</span></a>
+                            <a title="Landing Page" href="events.html" aria-expanded="false"><i class="fa fa-book" aria-hidden="true"></i> <span class="mini-click-non">Livros</span></a>
                         </li>
                         <li class="">
                             <a class="has-arrow" href="all-students.html" aria-expanded="false"><span class="educate-icon educate-student icon-wrap"></span> <span class="mini-click-non">Perfil</span></a>
