Card continuar assistindo ok

--- a/ead/index.html
+++ b/ead/index.html
@@ -397,26 +397,25 @@
                 </div>
             </div>
         </div>
-
-        <div class="product-sales-area mg-tb-30">
+ 
+        <section class="continuar-assistindo">
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                        <div class="product-sales-chart">
-                            <div class="portlet-title">
-                                <div class="row">
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                        <div class="caption pro-sl-hd">
-                                            <span class="caption-subject"><b>Adminsion Statistic</b></span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-md-6 col-sm-6 col-xs-12">
+                        <h3>Continuar assistindo</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3 col-sm-3 col-xs-12">
+                <div class="card">
+                    <div class="slider-image">
+                        <img src="https://dummyimage.com/250x200/#cccccc/1f1b1f.png" class="img-responsive" alt="a" />
                     </div>
                 </div>
             </div>
-        </div>
+                </div>
+            </div>
+        </section>
 
         <div class="traffic-analysis-area mg-tb-30">
             <div class="container-fluid">
