--- a/ead/index.html
+++ b/ead/index.html
@@ -374,21 +374,10 @@
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="breadcome-list">
                                 <div class="row">
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                         <div class="breadcome-heading">
-                                            <form role="search" class="sr-input-func">
-                                                <input type="text" placeholder="Procurar..." class="search-int form-control">
-                                                <a href="#"><i class="fa fa-search"></i></a>
-                                            </form>
+                                            <h2 class="logged-home">Bem-vindo(a), Gabriela Gonçalves</h2>
                                         </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                        <ul class="breadcome-menu">
-                                            <li><a href="#">Home</a> <span class="bread-slash">/</span>
-                                            </li>
-                                            <li><span class="bread-blod">Dashboard V.1</span>
-                                            </li>
-                                        </ul>
                                     </div>
                                 </div>
                             </div>
@@ -406,13 +395,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-3 col-sm-3 col-xs-12">
-                <div class="card">
-                    <div class="slider-image">
-                        <img src="https://dummyimage.com/250x200/#cccccc/1f1b1f.png" class="img-responsive" alt="a" />
+                    <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
+                        <div class="card video-card">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
                 </div>
             </div>
         </section>
@@ -433,31 +422,24 @@
                     <div class="carousel-inner">
                         <div class="item active">
                             <div class="row">
-                                <div class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="slider-item">
-                                        <div class="slider-image">
-                                            <img src="https://dummyimage.com/250x200/#cccccc/1f1b1f.png" class="img-responsive" alt="a" />
+                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
+                                    <div class="card video-card">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="slider-item">
-                                        <div class="slider-image">
-                                            <img src="https://dummyimage.com/250x200/#cccccc/1f1b1f.png" class="img-responsive" alt="a" />
+                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
+                                    <div class="card video-card">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="slider-item">
-                                        <div class="slider-image">
-                                            <img src="https://dummyimage.com/250x200/#cccccc/1f1b1f.png" class="img-responsive" alt="a" />
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="slider-item">
-                                        <div class="slider-image">
-                                            <img src="https://dummyimage.com/250x200/#cccccc/1f1b1f.png" class="img-responsive" alt="a" />
+                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
+                                    <div class="card video-card">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -465,35 +447,28 @@
                         </div>
                         <div class="item">
                             <div class="row">
-                                <div class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="slider-item">
-                                        <div class="slider-image">
-                                            <img src="https://dummyimage.com/250x200/#cccccc/1f1b1f.png" class="img-responsive" alt="a" />
+                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
+                                    <div class="card video-card">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="slider-item">
-                                        <div class="slider-image">
-                                            <img src="https://dummyimage.com/250x200/#cccccc/1f1b1f.png" class="img-responsive" alt="a" />
+                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
+                                    <div class="card video-card">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="slider-item">
-                                        <div class="slider-image">
-                                            <img src="https://dummyimage.com/250x200/#cccccc/1f1b1f.png" class="img-responsive" alt="a" />
+                                <div class="col-xs-12 col-sm-6 col-lg-4 col-xl-3 grid-item cat-a cat-c">
+                                    <div class="card video-card">
+                                        <div class="embed-responsive embed-responsive-16by9">
+                                            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/zpOULjyy-n8?rel=0" allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
-                               <div class="col-md-3 col-sm-3 col-xs-12">
-                                    <div class="slider-item">
-                                        <div class="slider-image">
-                                            <img src="https://dummyimage.com/250x200/#cccccc/1f1b1f.png" class="img-responsive" alt="a" />
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>    
+                            </div>
                         </div>
                     </div>
                 </div>
