--- a/ead/index.html
+++ b/ead/index.html
@@ -367,7 +367,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Mobile Menu end -->
+
             <div class="breadcome-area">
                 <div class="container-fluid">
                     <div class="row">
@@ -391,7 +391,7 @@
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-12">
-                        <h3>Continuar assistindo</h3>
+                        <h3>Pronto para voltar?</h3>
                     </div>
                 </div>
                 <div class="row">
