Colocando menu em todas as pages... . part

--- a/ead/perfil.html
+++ b/ead/perfil.html
@@ -114,11 +114,7 @@
                                 <span class="mini-click-non">Perfil</span>
                             </a>
                             <ul class="submenu-angle" aria-expanded="false">
-                                <li><a href="#"><span class="edu-icon edu-home-admin author-log-ic"></span>Minha Conta</a>
-                                </li>
                                 <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
-                                </li>
-                                <li><a href="#"><span class="edu-icon edu-settings author-log-ic"></span>Configurações</a>
                                 </li>
                                 <li><a href="login.html"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>
                                 </li>
@@ -296,13 +292,9 @@
 															<img src="assets/img/product/pro4.jpg" alt="" /> <span class="admin-name">Gabriela Gonçalves</span><i class="fa fa-angle-down edu-icon edu-down-arrow"></i>
 														</a>
                                                     <ul role="menu" class="dropdown-header-top author-log dropdown-menu animated zoomIn">
-                                                        <li><a href="#"><span class="edu-icon edu-home-admin author-log-ic"></span>Minha Conta</a>
+                                                        <li><a href="#"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Meu Perfil</a>
                                                         </li>
-                                                        <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
-                                                        </li>
-                                                        <li><a href="#"><span class="edu-icon edu-settings author-log-ic"></span>Configurações</a>
-                                                        </li>
-                                                        <li><a href="login.html"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>                                                  
+                                                        <li><a href="login.html"><i class="fa fa-sign-out" aria-hidden="true"></i> Sair</a>   
                                                         </li>
                                                     </ul>
                                                 </li>
