--- a/ead/forum.html
+++ b/ead/forum.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Plataforma EAD | Crypto Money</title>
+    <title>Fórum | Crypto Money</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- favicon
@@ -114,11 +114,7 @@
                                 <span class="mini-click-non">Perfil</span>
                             </a>
                             <ul class="submenu-angle" aria-expanded="false">
-                                <li><a href="#"><span class="edu-icon edu-home-admin author-log-ic"></span>Minha Conta</a>
-                                </li>
                                 <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
-                                </li>
-                                <li><a href="#"><span class="edu-icon edu-settings author-log-ic"></span>Configurações</a>
                                 </li>
                                 <li><a href="login.html"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>
                                 </li>
@@ -293,16 +289,12 @@
                                                 </li>
                                                 <li class="nav-item">
                                                     <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle">
-															<img src="assets/img/product/pro4.jpg" alt="" /> <span class="admin-name">Gabriela Gonçalves</span><i class="fa fa-angle-down edu-icon edu-down-arrow"></i>
-														</a>
+                                                            <img src="assets/img/product/pro4.jpg" alt="" /> <span class="admin-name">Gabriela Gonçalves</span><i class="fa fa-angle-down edu-icon edu-down-arrow"></i>
+                                                        </a>
                                                     <ul role="menu" class="dropdown-header-top author-log dropdown-menu animated zoomIn">
-                                                        <li><a href="#"><span class="edu-icon edu-home-admin author-log-ic"></span>Minha Conta</a>
+                                                        <li><a href="#"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Meu Perfil</a>
                                                         </li>
-                                                        <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
-                                                        </li>
-                                                        <li><a href="#"><span class="edu-icon edu-settings author-log-ic"></span>Configurações</a>
-                                                        </li>
-                                                        <li><a href="login.html"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>                                                  
+                                                        <li><a href="login.html"><i class="fa fa-sign-out" aria-hidden="true"></i> Sair</a>   
                                                         </li>
                                                     </ul>
                                                 </li>
@@ -344,15 +336,11 @@
                                             <a title="Landing Page" href="events.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Livros</span></a>
                                         </li>
                                         <li class="">
-                                            <a class="has-arrow" href="all-students.html" aria-expanded="false"><span class="educate-icon educate-student icon-wrap"></span> <span class="mini-click-non">Perfil</span></a>
+                                            <a class="has-arrow" aria-expanded="false"><span class="educate-icon educate-student icon-wrap"></span> <span class="mini-click-non">Perfil</span></a>
                                             <ul class="submenu-angle" aria-expanded="false">
-                                                <li><a href="#"><span class="edu-icon edu-home-admin author-log-ic"></span>Minha Conta</a>
+                                               <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
                                                 </li>
-                                                <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
-                                                </li>
-                                                <li><a href="#"><span class="edu-icon edu-settings author-log-ic"></span>Configurações</a>
-                                                </li>
-                                                <li><a href="#"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>
+                                                <li><a href="login.html"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>
                                                 </li>
                                             </ul>
                                         </li>
