link do curso para o curso.id

--- a/ead/curso.html
+++ b/ead/curso.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Plataforma EAD | Crypto Money</title>
+    <title>Meus Cursos | Crypto Money</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- favicon
@@ -389,7 +389,11 @@
                                 <p><span><i class="fa fa-clock"></i></span> <b>Horas:</b> 120hrs</p>
                             </div>
                             <div class="product-buttons text-center">
-                                <button type="button" class="button-default cart-btn">Saiba Mais</button>
+                                <a href="curso.id.html">
+                                    <button type="button" class="button-default cart-btn">
+                                       Começar
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
