--- a/ead/todos-cursos.html
+++ b/ead/todos-cursos.html
@@ -388,8 +388,12 @@
                                 <p><span><i class="fa fa-clock"></i></span> <b>Professor:</b> Jane Doe</p>
                                 <p><span><i class="fa fa-clock"></i></span> <b>Students:</b> 100+</p>
                             </div>
-                            <div class="product-buttons">
-                                <button type="button" class="button-default cart-btn">Read More</button>
+                            <div class="product-buttons text-center">
+                                <a href="curso.id.html">
+                                    <button type="button" class="button-default cart-btn">
+                                       Começar
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -409,8 +413,12 @@
                                 <p><span><i class="fa fa-clock"></i></span> <b>Professor:</b> Jane Doe</p>
                                 <p><span><i class="fa fa-clock"></i></span> <b>Students:</b> 100+</p>
                             </div>
-                            <div class="product-buttons">
-                                <button type="button" class="button-default cart-btn">Read More</button>
+                            <div class="product-buttons text-center">
+                                <a href="pagamento.html">
+                                    <button type="button" class="button-default cart-btn">
+                                       Começar
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -430,8 +438,12 @@
                                 <p><span><i class="fa fa-clock"></i></span> <b>Professor:</b> Jane Doe</p>
                                 <p><span><i class="fa fa-clock"></i></span> <b>Students:</b> 100+</p>
                             </div>
-                            <div class="product-buttons">
-                                <button type="button" class="button-default cart-btn">Read More</button>
+                            <div class="product-buttons text-center">
+                                <a href="pagamento.html">
+                                    <button type="button" class="button-default cart-btn">
+                                       Começar
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -451,8 +463,12 @@
                                 <p><span><i class="fa fa-clock"></i></span> <b>Professor:</b> Jane Doe</p>
                                 <p><span><i class="fa fa-clock"></i></span> <b>Students:</b> 100+</p>
                             </div>
-                            <div class="product-buttons">
-                                <button type="button" class="button-default cart-btn">Read More</button>
+                           <div class="product-buttons text-center">
+                                <a href="pagamento.html">
+                                    <button type="button" class="button-default cart-btn">
+                                       Começar
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -474,8 +490,12 @@
                                 <p><span><i class="fa fa-clock"></i></span> <b>Professor:</b> Jane Doe</p>
                                 <p><span><i class="fa fa-clock"></i></span> <b>Students:</b> 100+</p>
                             </div>
-                            <div class="product-buttons">
-                                <button type="button" class="button-default cart-btn">Read More</button>
+                            <div class="product-buttons text-center">
+                                <a href="pagamento.html">
+                                    <button type="button" class="button-default cart-btn">
+                                       Começar
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -495,8 +515,12 @@
                                 <p><span><i class="fa fa-clock"></i></span> <b>Professor:</b> Jane Doe</p>
                                 <p><span><i class="fa fa-clock"></i></span> <b>Students:</b> 100+</p>
                             </div>
-                            <div class="product-buttons">
-                                <button type="button" class="button-default cart-btn">Read More</button>
+                            <div class="product-buttons text-center">
+                                <a href="pagamento.html">
+                                    <button type="button" class="button-default cart-btn">
+                                       Começar
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -516,8 +540,12 @@
                                 <p><span><i class="fa fa-clock"></i></span> <b>Professor:</b> Jane Doe</p>
                                 <p><span><i class="fa fa-clock"></i></span> <b>Students:</b> 100+</p>
                             </div>
-                            <div class="product-buttons">
-                                <button type="button" class="button-default cart-btn">Read More</button>
+                            <div class="product-buttons text-center">
+                                <a href="pagamento.html">
+                                    <button type="button" class="button-default cart-btn">
+                                       Começar
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -537,8 +565,12 @@
                                 <p><span><i class="fa fa-clock"></i></span> <b>Professor:</b> Jane Doe</p>
                                 <p><span><i class="fa fa-clock"></i></span> <b>Students:</b> 100+</p>
                             </div>
-                            <div class="product-buttons">
-                                <button type="button" class="button-default cart-btn">Read More</button>
+                            <div class="product-buttons text-center">
+                                <a href="pagamento.html">
+                                    <button type="button" class="button-default cart-btn">
+                                       Começar
+                                    </button>
+                                </a>
                             </div>
                         </div>
                     </div>
