Link nas imagens nos cursos

--- a/ead/todos-cursos.html
+++ b/ead/todos-cursos.html
@@ -375,7 +375,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="courses-inner res-mg-b-30">
                             <div class="courses-title">
-                                <a href="#"><img src="assets/img/courses/1.jpg" alt=""></a>
+                                <a href="curso.id.html"><img src="assets/img/courses/1.jpg" alt=""></a>
                                 <h2>Apps Development</h2>
                             </div>
                             <div class="courses-alaltic">
@@ -400,7 +400,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="courses-inner">
                             <div class="courses-title">
-                                <a href="#"><img src="assets/img/courses/2.jpg" alt=""></a>
+                                <a href="curso-pagamento.html"><img src="assets/img/courses/2.jpg" alt=""></a>
                                 <h2>Illustrator CC 2018</h2>
                             </div>
                             <div class="courses-alaltic">
@@ -425,7 +425,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="courses-inner res-mg-t-30 dk-res-t-pro-30">
                             <div class="courses-title">
-                                <a href="#"><img src="assets/img/courses/3.jpg" alt=""></a>
+                                <a href="curso-pagamento.html"><img src="assets/img/courses/3.jpg" alt=""></a>
                                 <h2>Indesign cs6 2018</h2>
                             </div>
                             <div class="courses-alaltic">
@@ -450,7 +450,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="courses-inner res-mg-t-30 dk-res-t-pro-30">
                             <div class="courses-title">
-                                <a href="#"><img src="assets/img/courses/1.jpg" alt=""></a>
+                                <a href="curso-pagamento.html"><img src="assets/img/courses/1.jpg" alt=""></a>
                                 <h2>Web Development</h2>
                             </div>
                             <div class="courses-alaltic">
@@ -477,7 +477,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="courses-inner mg-t-30">
                             <div class="courses-title">
-                                <a href="#"><img src="assets/img/courses/1.jpg" alt=""></a>
+                                <a href="curso-pagamento.html"><img src="assets/img/courses/1.jpg" alt=""></a>
                                 <h2>Apps Development</h2>
                             </div>
                             <div class="courses-alaltic">
@@ -502,7 +502,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="courses-inner mg-t-30">
                             <div class="courses-title">
-                                <a href="#"><img src="assets/img/courses/2.jpg" alt=""></a>
+                                <a href="curso-pagamento.html"><img src="assets/img/courses/2.jpg" alt=""></a>
                                 <h2>Illustrator CC 2018</h2>
                             </div>
                             <div class="courses-alaltic">
@@ -527,7 +527,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="courses-inner mg-t-30">
                             <div class="courses-title">
-                                <a href="#"><img src="assets/img/courses/3.jpg" alt=""></a>
+                                <a href="curso-pagamento.html"><img src="assets/img/courses/3.jpg" alt=""></a>
                                 <h2>Indesign cs6 2018</h2>
                             </div>
                             <div class="courses-alaltic">
@@ -552,7 +552,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="courses-inner mg-t-30">
                             <div class="courses-title">
-                                <a href="#"><img src="assets/img/courses/1.jpg" alt=""></a>
+                                <a href="curso-pagamento.html"><img src="assets/img/courses/1.jpg" alt=""></a>
                                 <h2>Web Development</h2>
                             </div>
                             <div class="courses-alaltic">
