--- a/ead/curso.html
+++ b/ead/curso.html
@@ -375,7 +375,7 @@
                     <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12">
                         <div class="courses-inner res-mg-b-30">
                             <div class="courses-title">
-                                <a href="#"><img src="assets/img/courses/1.jpg" alt=""></a>
+                                <a href="curso.id.html"><img src="assets/img/courses/1.jpg" alt=""></a>
                                 <h2>Investindo do ZERO</h2>
                             </div>
                             <div class="courses-alaltic">
