Page Perfil completo

--- a/ead/perfil.html
+++ b/ead/perfil.html
@@ -32,6 +32,9 @@
     <!-- animate CSS
 		============================================ -->
     <link rel="stylesheet" href="assets/css/animate.css">
+    <!-- dropzone CSS
+        ============================================ -->
+    <link rel="stylesheet" href="assets/css/dropzone/dropzone.css">
     <!-- normalize CSS
 		============================================ -->
     <link rel="stylesheet" href="assets/css/normalize.css">
@@ -388,7 +391,7 @@
                                                     <form action="#" class="dropzone dropzone-custom needsclick add-professors" id="demo1-upload">
                                                         <div class="row">
                                                              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                                                                <div class="form-group alert-up-pd">
+                                                                <div class="form-group alert-up-pd text-center">
                                                                     <div class="dz-message needsclick download-custom">
                                                                         <i class="fa fa-download edudropnone" aria-hidden="true"></i>
                                                                         <h2 class="edudropnone">Solte a imagem aqui ou clique para fazer o upload.</h2>
@@ -464,6 +467,7 @@
     <script src="assets/js/owl.carousel.min.js"></script>
     <!-- sticky JS
 		============================================ -->
+    <script src="assets/js/dropzone/dropzone.js"></script>
     <script src="assets/js/jquery.sticky.js"></script>
     <!-- scrollUp JS
 		============================================ -->
