--- a/ead/livros.html
+++ b/ead/livros.html
@@ -509,41 +509,42 @@
     </div>
 
     <!-- jquery
-		============================================ -->
+        ============================================ -->
     <script src="assets/js/vendor/jquery-1.12.4.min.js"></script>
     <!-- bootstrap JS
-		============================================ -->
+        ============================================ -->
     <script src="assets/js/bootstrap.min.js"></script>
     <!-- wow JS
-		============================================ -->
+        ============================================ -->
     <script src="assets/js/wow.min.js"></script>
     <!-- price-slider JS
-		============================================ -->
+        ============================================ -->
     <script src="assets/js/jquery-price-slider.js"></script>
     <!-- meanmenu JS
-		============================================ -->
+        ============================================ -->
     <script src="assets/js/jquery.meanmenu.js"></script>
     <!-- owl.carousel JS
-		============================================ -->
+        ============================================ -->
     <script src="assets/js/owl.carousel.min.js"></script>
     <!-- sticky JS
-		============================================ -->
+        ============================================ -->
+    <script src="assets/js/dropzone/dropzone.js"></script>
     <script src="assets/js/jquery.sticky.js"></script>
     <!-- scrollUp JS
-		============================================ -->
+        ============================================ -->
     <script src="assets/js/jquery.scrollUp.min.js"></script>
     
     <script src="assets/js/metisMenu/metisMenu.min.js"></script>
     <script src="assets/js/metisMenu/metisMenu-active.js"></script>
 
     <!-- plugins JS
-		============================================ -->
+        ============================================ -->
     <script src="assets/js/plugins.js"></script>
     <!-- main JS
-		============================================ -->
+        ============================================ -->
     <script src="assets/js/main.js"></script>
     <!-- tawk chat JS
-		============================================ -->
+        ============================================ -->
     <script src="assets/js/tawk-chat.js"></script>
 </body>
 
