Ajustes de M.Q no site principal

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6">
-                    <div class="about-thumbnail mb-100">
+                    <div class="about-thumbnail mb-100 text-center">
                         <img class="img-fluid" src="img/bg-img/breadcumb.png" alt="">
                     </div>
                 </div>                
